// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note display comment in false  Matches snapshot when the note is not comments 1`] = `
<div>
  <div
    class="mod-share-container py-12 mb-16 mb-0_l border border-bottom border-thin border-neutral-light-100 border-0_l --no-app sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex mb-0 p-0_l"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 pr-8_max1023 pb-16_l flex-column_l"
          id="first-button-group"
        >
          <div
            class="relative flex"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 ia --secondary"
              data-event="LinkClick"
              data-section="IA"
              data-variant="secondary"
              id="btnIA"
              title="IA"
              type="button"
            >
              <i
                class="icon --icon-40 --inherit"
              >
                <mock-icon
                  fill="#FFF"
                  name="iaGeneric"
                />
              </i>
            </button>
            <div
              class="tooltip absolute p-12 flex gap-4 rounded-4 text-12 px-8 py-12 line-height-130 text-light-50 bg-blue-500 w-max 2 z-10"
              data-position="right"
              data-visible="false"
              role="tooltip"
              style="max-width: 272px;"
            >
              <i
                class="icon --icon-16"
              >
                <mock-icon
                  name="iaTools"
                />
              </i>
              Leer el resumen y glosario generados por la inteligencia artificial
              <button
                class="button ln-button font-bold border border-thin rounded-4 gap-8 border-transparent js-start --custom"
                data-variant="custom"
                type="button"
              >
                <i
                  class="icon --icon-20"
                >
                  <mock-icon
                    fill="#fff"
                    name="close"
                  />
                </i>
              </button>
            </div>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Notas guardadas"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical="true"
                name="bookmarkFilled"
              />
            </i>
          </button>
        </div>
        <hr
          class=""
        />
        <div
          class="second-buttons-group flex ai-center flex-column_l pl-8_max1023 ai-center_max1023 jc-center_l pt-16_l gap-8 gap-24_m"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="whatsAppShareMobile"
            title="Compartir la nota en Whatsapp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - share Snapshot - Should show 11 buttons  1`] = `
<div>
  <div
    class="mod-share-container py-12 mb-16 mb-0_l border border-bottom border-thin border-neutral-light-100 border-0_l --no-app sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex mb-0 p-0_l"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 pr-8_max1023 pb-16_l flex-column_l"
          id="first-button-group"
        >
          <div
            class="relative flex"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 ia --secondary"
              data-event="LinkClick"
              data-section="IA"
              data-variant="secondary"
              id="btnIA"
              title="IA"
              type="button"
            >
              <i
                class="icon --icon-40 --inherit"
              >
                <mock-icon
                  fill="#FFF"
                  name="iaGeneric"
                />
              </i>
            </button>
            <div
              class="tooltip absolute p-12 flex gap-4 rounded-4 text-12 px-8 py-12 line-height-130 text-light-50 bg-blue-500 w-max 2 z-10"
              data-position="right"
              data-visible="false"
              role="tooltip"
              style="max-width: 272px;"
            >
              <i
                class="icon --icon-16"
              >
                <mock-icon
                  name="iaTools"
                />
              </i>
              Leer el resumen y glosario generados por la inteligencia artificial
              <button
                class="button ln-button font-bold border border-thin rounded-4 gap-8 border-transparent js-start --custom"
                data-variant="custom"
                type="button"
              >
                <i
                  class="icon --icon-20"
                >
                  <mock-icon
                    fill="#fff"
                    name="close"
                  />
                </i>
              </button>
            </div>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Notas guardadas"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical="true"
                name="bookmarkFilled"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 comment-btn flex w-fit-content p-8 gap-4 h-40_max1023 h-fit-content_min1024 w-40_min1024 flex-column_l --secondary"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="secondary"
            id="btncomments"
            title="Ir a los comentarios de la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="chat"
              />
            </i>
          </button>
        </div>
        <hr
          class=""
        />
        <div
          class="second-buttons-group flex ai-center flex-column_l pl-8_max1023 ai-center_max1023 jc-center_l pt-16_l gap-8 gap-24_m"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="whatsAppShareMobile"
            title="Compartir la nota en Whatsapp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components - private - LN - nota - share Test click button bookmark 1`] = `
<div>
  <div
    class="mod-share-container py-12 mb-16 mb-0_l border border-bottom border-thin border-neutral-light-100 border-0_l --no-app sticky float-l_l z-101 transition transition-all transition-duration-250 top-73_min1024"
  >
    <div
      class="mod-share flex mb-0 p-0_l"
    >
      <div
        class="share flex relative z-100 flex-column_l bg-light-0 pb-16_l pt-8_l px-8_l"
        id="v-share"
      >
        <div
          class="first-buttons-group flex gap-16 pr-8_max1023 pb-16_l flex-column_l"
          id="first-button-group"
        >
          <div
            class="relative flex"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 ia --secondary"
              data-event="LinkClick"
              data-section="IA"
              data-variant="secondary"
              id="btnIA"
              title="IA"
              type="button"
            >
              <i
                class="icon --icon-40 --inherit"
              >
                <mock-icon
                  fill="#FFF"
                  name="iaGeneric"
                />
              </i>
            </button>
            <div
              class="tooltip absolute p-12 flex gap-4 rounded-4 text-12 px-8 py-12 line-height-130 text-light-50 bg-blue-500 w-max 2 z-10"
              data-position="right"
              data-visible="false"
              role="tooltip"
              style="max-width: 272px;"
            >
              <i
                class="icon --icon-16"
              >
                <mock-icon
                  name="iaTools"
                />
              </i>
              Leer el resumen y glosario generados por la inteligencia artificial
              <button
                class="button ln-button font-bold border border-thin rounded-4 gap-8 border-transparent js-start --custom"
                data-variant="custom"
                type="button"
              >
                <i
                  class="icon --icon-20"
                >
                  <mock-icon
                    fill="#fff"
                    name="close"
                  />
                </i>
              </button>
            </div>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 bookmark --is-saved --secondary"
            data-event="LinkClick"
            data-section="Guardar Nota"
            data-variant="secondary"
            id="btnbookmark"
            title="Notas guardadas"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                critical="true"
                name="bookmarkFilled"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 comment-btn flex w-fit-content p-8 gap-4 h-40_max1023 h-fit-content_min1024 w-40_min1024 flex-column_l --secondary"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="secondary"
            id="btncomments"
            title="Ir a los comentarios de la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="chat"
              />
            </i>
          </button>
        </div>
        <hr
          class=""
        />
        <div
          class="second-buttons-group flex ai-center flex-column_l pl-8_max1023 ai-center_max1023 jc-center_l pt-16_l gap-8 gap-24_m"
        >
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="compartirMobile"
            title="Compartir la nota"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="reply"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all  border-neutral-light-800 bg-secondary__hover text-neutral-light-800 h-40 w-40 p-12 sm-only --secondary"
            data-variant="secondary"
            id="whatsAppShareMobile"
            title="Compartir la nota en Whatsapp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="whatsAppShareDesktop"
            title="Compartir la nota en WhatsApp"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="whatsapp"
              />
            </i>
          </button>
          <div
            class="btn-container sm-none flex relative"
          >
            <button
              class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
              data-event="LinkClick"
              data-section="CompartirNotaLN"
              data-variant="default"
              id="copyLinkNote"
              title="Copiar link de la nota"
              type="button"
            >
              <i
                class="icon --icon-24 --inherit"
              >
                <mock-icon
                  name="fileCopy"
                />
              </i>
            </button>
          </div>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnfacebook"
            title="Compartir la nota en Facebook"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="facebook"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btntwitter"
            title="Compartir la nota en X"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="twitter"
              />
            </i>
          </button>
          <button
            class="button ln-button font-bold border border-thin rounded-4 gap-8 border-all border-transparent bg-transparent 
      text-light-700 email p-0 sm-none --default"
            data-event="LinkClick"
            data-section="CompartirNotaLN"
            data-variant="default"
            id="btnemail"
            title="Compartir la nota por E-mail"
            type="button"
          >
            <i
              class="icon --icon-24 --inherit"
            >
              <mock-icon
                name="mail"
              />
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
